# react-wasm-table

./: .gitignore  .mise.toml  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README_KO.md  bunfig.toml  happydom.ts  package.json  rustfmt.toml
.claude/commands/: commit.md  pr.md
.claude/skills/: tanstack-api.md
.github/workflows/: build.yml  docs.yml  e2e.yml  lint-rust.yml  lint-ts.yml  publish.yml  test.yml
crates/core/: Cargo.toml
crates/core/src/: columnar_store.rs  data_store.rs  filtering.rs  index_ops.rs  layout.rs  (+5 more)
crates/wasm/: Cargo.toml
crates/wasm/src/: convert.rs  lib.rs  types.rs
docs/: api-design.md  architecture.md  canvas-component-list.md  canvas-components.md  cell-editing-plan.md  code-rules.md  composite-layout-architecture.md  css-differences.md  debugging.md  module-specs.md  plan-css-grid.md  pr-20-typescript-review.md  roadmap.md  streaming-phase2-plan.md  testing-strategy.md  variable-row-height.md
document/: package.json  rspress.config.ts  tailwind.css  tsconfig.json
document/demo/: data.ts
document/docs/: index.md
document/theme/: index.tsx
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: coordinate-helpers.ts  grid-page.ts  index.ts
e2e/tests/: cell-click.spec.ts  grid-template.spec.ts  initial-render.spec.ts  scroll.spec.ts  sort-scroll-combo.spec.ts  sort.spec.ts
examples/demo/: index.html  package.json  vite.config.ts
scripts/: build-wasm.ts  coverage-comment-rust.ts  coverage-comment.ts  dev.ts  extract-code-to-mdx.ts  generate-favicon.ts  strip-commit-attribution.sh
(+298 files in other folders)
