[package]
name = "react-wasm-table-wasm"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
debug-log = ["react-wasm-table-core/debug-log", "console_log"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
react-wasm-table-core = { path = "../core" }
wasm-bindgen = "0.2"
log = "0.4"
console_log = { version = "1", optional = true, features = ["color"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
